Added settings page to home page

--- a/flaskApp/app/templates/index.html
+++ b/flaskApp/app/templates/index.html
@@ -3,4 +3,5 @@
 {% block content %}
     <a href="/about">About</a>
     <a href="/resources">Resources</a>
+    <a href="/settings">Settings</a>
 {% endblock %}
