--- a/flaskApp/app/templates/about.html
+++ b/flaskApp/app/templates/about.html
@@ -3,4 +3,5 @@
 {% block content %}
     <h1>About</h1>
     <a href="/resources">Resources</a>
+    <a href="/settings">Settings</a>
 {% endblock %}
