--- a/flaskApp/app/templates/settings.html
+++ b/flaskApp/app/templates/settings.html
@@ -2,5 +2,6 @@
 
 {% block content %}
     <h1>Settings</h1>
-    <a href="/settings">Settings</a>
+    <a href="/about">About</a>
+    <a href="/resources">Resources</a>
 {% endblock %}
