--- a/flaskApp/app/templates/about.html
+++ b/flaskApp/app/templates/about.html
@@ -4,4 +4,9 @@
     <h1>About</h1>
     <a href="/resources">Resources</a>
     <a href="/settings">Settings</a>
+
+<a><br> Our mission is to provide users access to the nearest locations of menstruation dispensers on their college campus. 
+    <br> The goal of this project is to help students have easier ways to access menstruation products, regardless of their financial situation.
+    <br> Also Weston is an alcholic, in this essay I will- 
+</a>
 {% endblock %}
