Removed useless folder

--- a/flaskApp/app/templates/about.html
+++ b/flaskApp/app/templates/about.html
@@ -1,27 +1,8 @@
+<head><link rel="stylesheet" type="text/css" href="style.css"></head>
 {% extends "base.html" %}
 
 {% block content %}
-<style>
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    width: 200px;
-    background-color: #f1f1f1;
-}
 
-li a {
-    display: block;
-    color: #000;
-    padding: 8px 16px;
-}
-
-li a:hover {
-    background-color: #555;
-    color: white;
-}
-
-</style>
     <h1>About</h1>
     <li><a href="/resources">Resources</a></li>
     <li><a href="/settings">Settings</a></li>
