--- a/flaskApp/app/templates/about.html
+++ b/flaskApp/app/templates/about.html
@@ -1,4 +1,9 @@
-{% extends "base.html" %}
+{% extends "bootstrap/about.html" %}
+
+{% extends navbar %}
+
+{% endblock %}
+
 
 {% block content %}
     <h1>About</h1>
