--- a/flaskApp/app/templates/about.html
+++ b/flaskApp/app/templates/about.html
@@ -4,9 +4,12 @@
 {% block content %}
 
     <h1>About</h1>
+    <strong><nav>
+    <ul class = "menu">
     <li><a href="/resources">Resources</a></li>
     <li><a href="/settings">Settings</a></li>
-
+    </ul>
+    </nav></strong>
 <a><br> Our mission is to provide users access to the nearest locations of menstruation dispensers on their college campus. 
     <br> The goal of this project is to help students have easier ways to access menstruation products, regardless of their financial situation.</br>
     About Aunt Flow: Aunt Flow was founded in Columbus, Ohio in 2016 by Claire Coder. 
