--- a/flaskApp/app/static/css/style.css
+++ b/flaskApp/app/static/css/style.css
@@ -4,15 +4,22 @@ ul {
     padding: 0;
     width: 200px;
     background-color: #f1f1f1;
-}
-
+  }
+  
 li a {
     display: block;
     color: #000;
     padding: 8px 16px;
-}
-
+    text-decoration: none;
+  }
+  
+  /* Change the link color on hover */
 li a:hover {
     background-color: #555;
     color: white;
-}
+  }
+
+  li a.active {
+    background-color: burlywood;
+    color: white;
+  }
