--- a/flaskApp/app/templates/index.html
+++ b/flaskApp/app/templates/index.html
@@ -4,4 +4,5 @@
     <a href="/about">About</a>
     <a href="/resources">Resources</a>
     <a href="/settings">Settings</a>
+    <a href="/base"> Base </a>
 {% endblock %}
