--- a/flaskApp/app/templates/about.html
+++ b/flaskApp/app/templates/about.html
@@ -11,6 +11,8 @@
     <li><a href="/settings">Settings</a></li>
     </ul>
 
+    <body style="background-color:pink;">
+
     <br> 
     Our mission is to provide users access to the nearest locations of 
     menstruation dispensers on their college campus. 
