--- a/flaskApp/app/static/css/style.css
+++ b/flaskApp/app/static/css/style.css
@@ -19,7 +19,12 @@ li a:hover {
     color: white;
   }
 
-  li a.active {
+li a.active {
     background-color: burlywood;
+    color: white;
+  }
+
+li a:hover:not(.active) {
+    background-color: #555;
     color: white;
   }
