--- a/flaskApp/app/templates/index.html
+++ b/flaskApp/app/templates/index.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <ul>
-<li><a href="/index">Main Menu</a></li>
+<li><a class="active" href="/index">Main Menu</a></li>
 <li><a href="/about">About</a></li>
 <li><a href="/resources">Resources</a></li>
 <li><a href="/settings">Settings</a></li>
