--- a/flaskApp/app/templates/resources.html
+++ b/flaskApp/app/templates/resources.html
@@ -6,7 +6,7 @@
     <ul>
     <li><a href="/index">Main Menu</a></li>
     <li><a href="/about">About</a></li>
-    <li><a href="/resources">Resources</a></li>
+    <li><a class="active" href="/resources">Resources</a></li>
     <li><a href="/settings">Settings</a></li>
     </ul>
 {% endblock %}
