--- a/flaskApp/app/templates/settings.html
+++ b/flaskApp/app/templates/settings.html
@@ -7,6 +7,6 @@
     <li><a href="/index">Main Menu</a></li>
     <li><a href="/about">About</a></li>
     <li><a href="/resources">Resources</a></li>
-    <li><a href="/settings">Settings</a></li>
+    <li><a class="active" href="/settings">Settings</a></li>
     </ul>
 {% endblock %}
