--- a/flaskApp/app/templates/about.html
+++ b/flaskApp/app/templates/about.html
@@ -1,5 +1,5 @@
 <!--<link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='css/style.css') }}"> -->
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='css/style.css') }}">
 {% extends "base.html" %}
 
 {% block content %}
