--- a/flaskApp/app/static/css/style.css
+++ b/flaskApp/app/static/css/style.css
@@ -28,3 +28,9 @@ li a:hover:not(.active) {
     background-color: #555;
     color: white;
   }
+
+.background{
+  color: #999999;
+  top: 0;
+  left: 0;
+}
