--- a/flaskApp/app/static/css/style.css
+++ b/flaskApp/app/static/css/style.css
@@ -1,36 +1,50 @@
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    width: 200px;
-    background-color: #f1f1f1;
-  }
-  
-li a {
-    display: block;
-    color: #000;
-    padding: 8px 16px;
-    text-decoration: none;
-  }
-  
+/* Navigation Bar */
+
+  ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      width: 200px;
+      background-color: #f1f1f1;
+      position: relative;
+      z-index: 1;
+      height: auto;
+      color: white;
+    }
+    
+  li a {
+      display: block;
+      color: #000;
+      padding: 8px 16px;
+      text-decoration: none;
+    }
+    
   /* Change the link color on hover */
-li a:hover {
-    background-color: #555;
-    color: white;
+  li a:hover {
+      background-color: #555;
+      color: white;
+    }
+
+  li a.active {
+      background-color: burlywood;
+      color: white;
+    }
+
+  li a:hover:not(.active) {
+      background-color: #555;
+      color: white;
+    }
+
+  .background{
+    color: #999999;
+    top: 0;
+    left: 0;
   }
 
-li a.active {
-    background-color: burlywood;
-    color: white;
-  }
+/* Map */
 
-li a:hover:not(.active) {
-    background-color: #555;
-    color: white;
-  }
-
-.background{
-  color: #999999;
-  top: 0;
-  left: 0;
-}
+#map {
+  height: 100%;  /* The height is 400 pixels */
+  width: 100%;  /* The width is the width of the web page */
+  z-index: 0;
+ }
