--- a/flaskApp/app/templates/about.html
+++ b/flaskApp/app/templates/about.html
@@ -4,14 +4,16 @@
 
 {% block content %}
 
-    <ul>
+<ul id="navBarMain">
     <li><a href="/index">Main Menu</a></li>
     <li><a class="active" href="/about">About</a></li>
     <li><a href="/resources">Resources</a></li>
     <li><a href="/settings">Settings</a></li>
-    </ul>
+</ul>
 
     <body style="background-color:pink;">
+
+    <!-- Need to segment each paragraph off into containers and add styling as needed. -->
 
     <br> 
     Our mission is to provide users access to the nearest locations of 
