--- a/flaskApp/app/templates/settings.html
+++ b/flaskApp/app/templates/settings.html
@@ -3,10 +3,12 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <ul>
+
+<ul id="navBarMain">
     <li><a href="/index">Main Menu</a></li>
     <li><a href="/about">About</a></li>
     <li><a href="/resources">Resources</a></li>
     <li><a class="active" href="/settings">Settings</a></li>
-    </ul>
+</ul>
+
 {% endblock %}
