--- a/flaskApp/app/static/css/style.css
+++ b/flaskApp/app/static/css/style.css
@@ -1,17 +1,41 @@
+#html {
+  height: 100%;
+}
+
+#mapNavContainer {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+
+#navBarMap {
+  list-style-type: none;
+  width: 200px;
+  background-color: #f1f1f1;
+  color: white;
+  z-index: 100;
+  height: auto;
+  position: fixed;
+  margin: 10px 0px 0px 200px;
+  border: 1px solid black;
+  padding: 5px;
+}
+/* This needs to be changed so the NavBar doesn't lay over the other pages, most likely to do with the position. */
+#navBarMain {
+  list-style-type: none;
+  width: 200px;
+  background-color: #f1f1f1;
+  color: white;
+  height: auto;
+  position: fixed;
+  margin: 10px 0px 0px 200px;
+  border: 1px solid black;
+  padding: 5px;
+}
+
 /* Navigation Bar */
 
-  ul {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-      width: 200px;
-      background-color: #f1f1f1;
-      position: relative;
-      z-index: 1;
-      height: auto;
-      color: white;
-    }
-    
+
   li a {
       display: block;
       color: #000;
@@ -26,7 +50,7 @@
     }
 
   li a.active {
-      background-color: burlywood;
+      background-color: #f8a6e4;
       color: white;
     }
 
@@ -46,5 +70,5 @@
 #map {
   height: 100%;  /* The height is 400 pixels */
   width: 100%;  /* The width is the width of the web page */
-  z-index: 0;
+  position: absolute;
  }
