--- a/flaskApp/app/templates/index.html
+++ b/flaskApp/app/templates/index.html
@@ -26,15 +26,19 @@ function initMap() {
         // Try HTML5 geolocation.
         if (navigator.geolocation) {
             navigator.geolocation.getCurrentPosition(function(position) {
-                var pos = {
-                    lat: position.coords.latitude,
-                    lng: position.coords.longitude
+                var pos = { 
+                    //temporary fake location, comment this and uncomment next two lines for actual location use
+                    lat: 41.148132,
+                    lng: -81.344246
+                    //lat: position.coords.latitude,
+                    //lng: position.coords.longitude
                 };
 
-            //infoWindow.setPosition(pos);
+            infoWindow.setPosition(pos);
+            
             infoWindow.setContent('Location found.');
             infoWindow.open(map);
-            //map.setCenter(pos);
+            map.setCenter(pos);
 
             }, function() {
                 handleLocationError(true, infoWindow, map.getCenter());
