--- a/flaskApp/app/templates/index.html
+++ b/flaskApp/app/templates/index.html
@@ -21,12 +21,25 @@ function initMap() {
         var map = new google.maps.Map(
             document.getElementById('map'), {zoom: 15, center: kent_State});
     
-            infoWindow = new google.maps.InfoWindow;
+        infoWindow = new google.maps.InfoWindow;
+
+        // starts services to calculate distance between your location and dispensers
+        dms = new google.maps.DistanceMatrixService();
+        dirService = new google.maps.DirectionsService();
+        dirRenderer = new google.maps.DirectionsRenderer({preserveViewport:true});
+
+        var pos = { 
+                    //temporary fake location, comment this and uncomment next two lines for actual location use
+                    lat: 41.148132,
+                    lng: -81.344246
+                    //lat: position.coords.latitude,
+                    //lng: position.coords.longitude
+                };
 
         // Try HTML5 geolocation.
         if (navigator.geolocation) {
             navigator.geolocation.getCurrentPosition(function(position) {
-                var pos = { 
+                pos = { 
                     //temporary fake location, comment this and uncomment next two lines for actual location use
                     lat: 41.148132,
                     lng: -81.344246
@@ -123,8 +136,6 @@ function initMap() {
         ['Oscar Richie Hall', 41.151435, -81.346570, '<h1><b>Oscar Richie Hall</b></h1>'],
         ];
 
-        
-        
         var infowindow = new google.maps.InfoWindow();
 
         for (i = 0; i < dispensers.length; i++) {  
@@ -140,7 +151,43 @@ function initMap() {
         }
         })(marker, i));
 
-         }
+        }
+
+        //create array of dispenser locations for distance matrix api
+        var dispenserLocs = [];
+        for (var i = 0; i < 15; ++i){
+            dispenserLocs.push(dispensers[i][1] + "," + dispensers[i][2]);
+        }
+        console.log(dispenserLocs);
+        console.log(pos);
+        //set origin location based on postition
+        var originLoc = [];
+        //originLoc.push(pos["lat"] + "," + pos["lat"]);
+        originLoc.push("41.144162, -81.341628");
+
+        //specifications for shortest distance calling
+        var query = {
+            origins: originLoc,
+            destinations: dispenserLocs,
+            travelMode: google.maps.TravelMode.WALKING,
+            unitSystem: google.maps.UnitSystem.IMPERIAL
+        };
+
+        getShortestDistance();
+
+        function getShortestDistance() {
+
+            dms.getDistanceMatrix(query, function(response, status) {
+                if (status == "OK") {
+                    //populateTable(response.rows);
+                    //replace this later with function that will display the closest dispenser
+                    console.log("we done did it dammit, we done did");
+                    console.log(response);
+                } else {
+                    console.log(response + " " + status);
+                }
+            });
+        }
 }
 </script>
 
