--- a/flaskApp/app/templates/index.html
+++ b/flaskApp/app/templates/index.html
@@ -28,16 +28,21 @@ function initMap() {
         dirService = new google.maps.DirectionsService();
         dirRenderer = new google.maps.DirectionsRenderer({preserveViewport:true});
 
-        var pos = { 
-                    //temporary fake location, comment this and uncomment next two lines for actual location use
-                     
-                    lat: 41.144162,
-                    lng: -81.341628
-                    //lat: 41.148132,
-                    //lng: -81.344246
-                    //lat: position.coords.latitude,
-                    //lng: position.coords.longitude
-                };
+        // for testing when you're not on Kent's campus
+        // simply set the pos variable below to testLocations[i] with i being 0 to 3
+        var testPositions = [
+            {lat:41.148161, lng:-81.344848}, // on williams drive
+            {lat: 41.144162,lng: -81.341628}, // near aeronautics bldg
+            {lat:41.147064, lng:-81.339513}, // on eastway drive
+            {lat:41.149772, lng:-81.346146} //janik drive
+        ];
+
+        // var pos = { 
+        //             lat: position.coords.latitude,
+        //             lng: position.coords.longitude
+        //         };
+        var pos = testPositions[3];
+        console.log(pos);
 
         // Try HTML5 geolocation.
         if (navigator.geolocation) {
@@ -145,21 +150,21 @@ function initMap() {
         var markerList = [];
 
         for (i = 0; i < dispensers.length; i++) {  
-        marker = new google.maps.Marker({
-        position: new google.maps.LatLng(dispensers[i][1], dispensers[i][2]),
-        map: map
-        });
+            marker = new google.maps.Marker({
+            position: new google.maps.LatLng(dispensers[i][1], dispensers[i][2]),
+            map: map
+            });
 
-        google.maps.event.addListener(marker, 'click', (function(marker, i) {
-        return function() {
-          infowindow.setContent(dispensers[i][3]);
-          infowindow.open(map, marker);
-          console.log(marker);
-        }
-        })(marker, i));
+            google.maps.event.addListener(marker, 'click', (function(marker, i) {
+            return function() {
+            infowindow.setContent(dispensers[i][3]);
+            infowindow.open(map, marker);
+            console.log(marker);
+            }
+            })(marker, i));
 
-        //add marker to marker list
-        markerList.push(marker);
+            //add marker to marker list
+            markerList.push(marker);
 
         }
 
@@ -176,7 +181,7 @@ function initMap() {
         //set origin location based on postition
         var originLoc = [];
         //originLoc.push(pos["lat"] + "," + pos["lat"]);
-        originLoc.push("41.144162, -81.341628");
+        originLoc.push(pos["lat"]+","+pos["lng"]);
 
         //specifications for shortest distance calling
         var query = {
