Added additonal dispenser information

--- a/flaskApp/app/templates/index.html
+++ b/flaskApp/app/templates/index.html
@@ -92,62 +92,116 @@ function initMap() {
         ' https://www.kent.edu/recservices</a>'],
 
         ['Aeronautics and Technology Building', 41.144371, -81.341203, '<h1><b>Aeronautics and Technology Building</b></h1>'
-        + '<p id="dispenserInformation"><b>Dispenser Information:</b>' + ' Located on the first floor.</p>'
+        + '<p id="dispenserInformation"><b>Dispenser Location:</b>' + ' Located on the first floor.</p>'
         + '<p><b>Gender:</b>' + ' Female</p>'],
 
-        ['Math and Computer Science Building', 41.145092, -81.341406, '<h1><b>Math and Computer Science Building</b></h1>'],
+        ['Math and Computer Science Building', 41.145092, -81.341406, '<h1><b>Math and Computer Science Building</b></h1>'
+        + '<p id="dispenserInformation"><b>Dispenser Location:</b>' + ' Located on the first floor.</p>'
+        + '<p><b>Gender:</b>' + ' Female and Male</p>'],
 
-        ['Henderson Hall', 41.145236, -81.340086, '<h1><b>Henderson Hall</b></h1>'],
+        ['Henderson Hall', 41.145236, -81.340086, '<h1><b>Henderson Hall</b></h1>'
+        + '<p id="dispenserInformation"><b>Dispenser Location:</b>' + ' Located on the first floor.</p>'
+        + '<p><b>Gender:</b>' + ' Female</p>'],
 
-        ['Cunningham Hall', 41.146039, -81.341202, '<h1><b>Cunningham Hall</b></h1>'],
+        ['Cunningham Hall', 41.146039, -81.341202, '<h1><b>Cunningham Hall</b></h1>'
+        + '<p id="dispenserInformation"><b>Dispenser Location:</b>' + ' Located on the first floor, Research Wing.</p>'
+        + '<p><b>Gender:</b>' + ' Female and Male</p>'],
 
-        ['Smith Hall', 41.145756, -81.342094, '<h1><b>Smith Hall</b></h1>'],
+        ['Smith Hall', 41.145756, -81.342094, '<h1><b>Smith Hall</b></h1>'
+        + '<p id="dispenserInformation"><b>Dispenser Location:</b>' + ' Located on the first floor.</p>'
+        + '<p><b>Gender:</b>' + ' Female</p>'],
 
-        ['Intergrated Science Building and Williams Hall', 41.149385, -81.342477, '<h1><b>Intergrated Science Building and Williams Hall</b></h1>'],
+        ['Intergrated Science Building and Williams Hall', 41.149385, -81.342477, '<h1><b>Intergrated Science Building and Williams Hall</b></h1>'
+        + '<p id="dispenserInformation"><b>Dispenser Location:</b>' + ' Located on the first floor.</p>'
+        + '<p><b>Gender:</b>' + ' Female and Male</p>'],
 
-        ['University Library', 41.146864, -81.342036, '<h1><b>University Library</b></h1>'],
+        ['University Library', 41.146864, -81.342036, '<h1><b>University Library</b></h1>'
+        + '<p id="dispenserInformation"><b>Dispenser Location:</b>' + ' Female dispensers located on the first and second floor. Male dispenser located on first floor.</p>'
+        + '<p><b>Gender:</b>' + ' Female and Male</p>'],
         
-        ['Kent Student  Center', 41.147924, -81.342511, '<h1><b>Kent Student  Center</b></h1>'],
+        ['Kent Student  Center', 41.147924, -81.342511, '<h1><b>Kent Student  Center</b></h1>'
+        + '<p id="dispenserInformation"><b>Dispenser Location:</b>' + ' Female dispensers located on the first and second floor. Male dispenser located on first floor.</p>'
+        + '<p><b>Gender:</b>' + ' Female and Male</p>'],
 
-        ['MACC Annex', 41.147982, -81.344297, '<h1><b>MACC Annex</b></h1>'],
+        ['MACC Annex', 41.147982, -81.344297, '<h1><b>MACC Annex</b></h1>'
+        + '<p id="dispenserInformation"><b>Dispenser Location:</b>' + ' Located on the first and second floor.</p>'
+        + '<p><b>Gender:</b>' + ' Female</p>'],
 
-        ['Center for Undergraduate Excellence', 41.148670, -81.345013, '<h1><b>Center for Undergraduate Excellence</b></h1>'],
+        ['Center for Undergraduate Excellence', 41.148670, -81.345013, '<h1><b>Center for Undergraduate Excellence</b></h1>'
+        + '<p id="dispenserInformation"><b>Dispenser Location:</b>' + ' Located on the first floor.</p>'
+        + '<p><b>Gender:</b>' + ' Female and Male</p>'],
 
-        ['Bowman', 41.148580, -81.346597, '<h1><b>Bowman</b></h1>'],
+        ['Bowman', 41.148580, -81.346597, '<h1><b>Bowman</b></h1>'
+        + '<p id="dispenserInformation"><b>Dispenser Location:</b>' + ' Located on the first floor.</p>'
+        + '<p><b>Gender:</b>' + ' Female and Male</p>'],
 
-        ['Satterfield', 41.148173, -81.347669, '<h1><b>Satterfield</b></h1>'],
+        ['Satterfield', 41.148173, -81.347669, '<h1><b>Satterfield</b></h1>'
+        + '<p id="dispenserInformation"><b>Dispenser Location:</b>' + ' Located on the first floor.</p>'
+        + '<p><b>Gender:</b>' + ' Female</p>'],
 
-        ['Taylor Hall', 41.150213, -81.344005, '<h1><b>Taylor Hall</b></h1>'],
+        ['Taylor Hall', 41.150213, -81.344005, '<h1><b>Taylor Hall</b></h1>'
+        + '<p id="dispenserInformation"><b>Dispenser Location:</b>' + ' Located on the first floor.</p>'
+        + '<p><b>Gender:</b>' + ' Female</p>'],
 
-        ['Business Administration Building', 41.149017, -81.348049, '<h1><b>Business Administration Building</b></h1>'],
+        ['Business Administration Building', 41.149017, -81.348049, '<h1><b>Business Administration Building</b></h1>'
+        + '<p id="dispenserInformation"><b>Dispenser Location:</b>' + ' Located on the first floor.</p>'
+        + '<p><b>Gender:</b>' + ' Female</p>'],
 
-        ['Center for the Visual Arts', 41.150261, -81.347436, '<h1><b>Center for the Visual Arts</b></h1>'],
+        ['Center for the Visual Arts', 41.150261, -81.347436, '<h1><b>Center for the Visual Arts</b></h1>'
+        + '<p id="dispenserInformation"><b>Dispenser Location:</b>' + ' Located on the first floor.</p>'
+        + '<p><b>Gender:</b>' + ' Female</p>'],
 
-        ['Kent State Center for Performing Arts', 41.152620, -81.340462, '<h1><b>Kent State Center for Performing Arts</b></h1>'],
+        ['Kent State Center for Performing Arts', 41.152620, -81.340462, '<h1><b>Kent State Center for Performing Arts</b></h1>'
+        + '<p id="dispenserInformation"><b>Dispenser Location:</b>' + ' Located on the first floor.</p>'
+        + '<p><b>Gender:</b>' + ' Female and Male</p>'],
 
-        ['Nixson Hall', 41.152083, -81.341841, '<h1><b>Nixson Hall</b></h1>'],
+        ['Nixson Hall', 41.152083, -81.341841, '<h1><b>Nixson Hall</b></h1>'
+        + '<p id="dispenserInformation"><b>Dispenser Location:</b>' + ' Located on the first floor.</p>'
+        + '<p><b>Gender:</b>' + ' Female</p>'],
 
-        ['White Hall', 41.152733, -81.345912, '<h1><b>White Hall</b></h1>'],
+        ['White Hall', 41.152733, -81.345912, '<h1><b>White Hall</b></h1>'
+        + '<p id="dispenserInformation"><b>Dispenser Location:</b>' + ' Located on the first floor.</p>'
+        + '<p><b>Gender:</b>' + ' Female</p>'],
 
-        ['Moulton Hall', 41.152966, -81.346684, '<h1><b>Moulton Hall</b></h1>'],
+        ['Moulton Hall', 41.152966, -81.346684, '<h1><b>Moulton Hall</b></h1>'
+        + '<p id="dispenserInformation"><b>Dispenser Location:</b>' + ' Located on the first floor.</p>'
+        + '<p><b>Gender:</b>' + ' Female and Male</p>'],
 
-        ['Lowry Hall', 41.152117, -81.347261, '<h1><b>Lowry Hall</b></h1>'],
+        ['Lowry Hall', 41.152117, -81.347261, '<h1><b>Lowry Hall</b></h1>'
+        + '<p id="dispenserInformation"><b>Dispenser Location:</b>' + ' Located on the first floor.</p>'
+        + '<p><b>Gender:</b>' + ' Female</p>'],
 
-        ['Merrill Hall', 41.151542, -81.348165, '<h1><b>Merrill Hall</b></h1>'],
+        ['Merrill Hall', 41.151542, -81.348165, '<h1><b>Merrill Hall</b></h1>'
+        + '<p id="dispenserInformation"><b>Dispenser Location:</b>' + ' Located on the all floors.</p>'
+        + '<p><b>Gender:</b>' + ' Female</p>'],
 
-        ['Cartwright Hall', 41.151224, -81.348798, '<h1><b>Cartwright Hall</b></h1>'],
+        ['Cartwright Hall', 41.151224, -81.348798, '<h1><b>Cartwright Hall</b></h1>'
+        + '<p id="dispenserInformation"><b>Dispenser Location:</b>' + ' Located on the first and second floor.</p>'
+        + '<p><b>Gender:</b>' + ' Female and Male</p>'],
 
-        ['Kent Hall', 41.150930, -81.349428, '<h1><b>Kent Hall</b></h1>'],
+        ['Kent Hall', 41.150930, -81.349428, '<h1><b>Kent Hall</b></h1>'
+        + '<p id="dispenserInformation"><b>Dispenser Location:</b>' + ' Located on the first and second floor.</p>'
+        + '<p><b>Gender:</b>' + ' Female</p>'],
 
-        ['McGilvery Hall', 41.150877, -81.350912, '<h1><b>McGilvery Hall</b></h1>'],
+        ['McGilvery Hall', 41.150877, -81.350912, '<h1><b>McGilvery Hall</b></h1>'
+        + '<p id="dispenserInformation"><b>Dispenser Location:</b>' + ' Located on all floors.</p>'
+        + '<p><b>Gender:</b>' + ' Female</p>'],
 
-        ['Center for Architecture and Enviromental Design', 41.152496, -81.352119, '<h1><b>Center for Architecture and Enviromental Design</b></h1>'],
+        ['Center for Architecture and Enviromental Design', 41.152496, -81.352119, '<h1><b>Center for Architecture and Enviromental Design</b></h1>'
+        + '<p id="dispenserInformation"><b>Dispenser Location:</b>' + ' Located on the first floor.</p>'
+        + '<p><b>Gender:</b>' + ' Female and Male</p>'],
 
-        ['Franklin Hall', 41.151593, -81.350987, '<h1><b>Franklin Hall</b></h1>'],
+        ['Franklin Hall', 41.151593, -81.350987, '<h1><b>Franklin Hall</b></h1>'
+        + '<p id="dispenserInformation"><b>Dispenser Location:</b>' + ' Located on the third floor.</p>'
+        + '<p><b>Gender:</b>' + ' Female and Male</p>'],
 
-        ['Rockwell Hall', 41.152810, -81.349923, '<h1><b>Rockwell Hall</b></h1>'],
+        ['Rockwell Hall', 41.152810, -81.349923, '<h1><b>Rockwell Hall</b></h1>'
+        + '<p id="dispenserInformation"><b>Dispenser Location:</b>' + ' Located on the first floor.</p>'
+        + '<p><b>Gender:</b>' + ' Female</p>'],
 
-        ['Oscar Richie Hall', 41.151435, -81.346570, '<h1><b>Oscar Richie Hall</b></h1>'],
+        ['Oscar Richie Hall', 41.151435, -81.346570, '<h1><b>Oscar Richie Hall</b></h1>'
+        + '<p id="dispenserInformation"><b>Dispenser Location:</b>' + ' Located on the first floor.</p>'
+        + '<p><b>Gender:</b>' + ' Female</p>'],
         ];
 
         var infowindow = new google.maps.InfoWindow();
